syntax = "proto3";

package peerv2;
option go_package="main";

message ProxyRegisterMsg {
    string CommitteePublicKey = 1;
    repeated string WantedMessages = 2;
    string PeerID = 3;
}

message ProxyRegisterResponse {
    repeated MessageTopicPair Pair = 1;
}

message MessageTopicPair {
    string Message = 1;
    repeated string Topic = 2;
    enum Action {
        PUBSUB = 0;
        PUB = 1;
        SUB = 2;
    }
    repeated Action Act = 3;
}

service ProxyRegisterService{
    //Unary
    rpc ProxyRegister(ProxyRegisterMsg) returns (ProxyRegisterResponse) {};
}
